# git-gone

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README  README.adoc  README.md  deny.toml  git-gone.1  git-gone.1.adoc  justfile  release.toml
.forgejo/workflows/: ci.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test.yml
scripts/: check  prerelease-update-manpage  release
src/: main.rs
supply-chain/: audits.toml  config.toml
