[package]
name = "git-gone"
version = "1.3.1"
description = "Manage \"gone\" Git branches"
homepage = "https://codeberg.org/swsnr/git-gone"
repository = "https://codeberg.org/swsnr/git-gone.git"
readme = "README.md"
license = "EUPL-1.2"
keywords = ["git", "branch", "remote"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2024"
include = ["src/*.rs", "*.md", "LICENSE", "README,md"]
rust-version = "1.89"

[dependencies]
anyhow = "1.0.102"
gix = { version = "0.81.0", default-features = false, features = ["sha1"] }
clap = { version = "4.6.0", default-features = false, features = [
    "std",
    # Auto-generate help and usage info
    "help",
    "usage",
    # Better error messages
    "error-context",
    "derive",
] }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
# Justfile takes care of building before release
verify = false
